@@ -1,17 +1,9 @@
+#include "config.h"
 #include <string.h>
-
-#include <gtk/gtk.h>
-#include <gtk/gtkhbox.h>
-#include <gtk/gtklabel.h>
-#include <gtk/gtkimage.h>
-#include <gtk/gtkvbox.h>
-#include <gtk/gtktable.h>
-#include <gtk/gtkbutton.h>
-#include <gtk/gtktogglebutton.h>
-#include <gtk/gtkentry.h>
-#include <panel-applet.h>
+#include <gtk/gtkicontheme.h>
 #include <libgnome/gnome-desktop-item.h>
 #include <libgnomeui/libgnomeui.h>
+#include <libgnome/gnome-i18n.h>
 #include <dirent.h>
 
 #include "app-shell.h"
